# CofSeg

./: .gitignore  README.md  RUNNING.md  pyproject.toml  requirements.txt
app/: annotator.py  gradio_app.py  init.py  server.py
app/static/: index.html
configs/: config.yaml
data/masks/corrected/: field_1__10__1__DJI_20260301075335_0002_D.jpg.json  field_1__10__1__DJI_20260301075346_0003_D.jpg.json  field_1__10__1__DJI_20260301075358_0004_D.jpg.json  field_1__10__1__DJI_20260301075409_0005_D.jpg.json
scripts/: 01_make_tiles.py  02_gen_seed.py  03_finetune_sam.py  04_infer_eval.py  05_viz_flower_hsv.py  06_superpixel_flower.py  07_data_inventory.py
src/data/: dataset.py  tiling.py
src/eval/: seg_metrics.py
src/inference/: infer.py
src/models/: sam_finetune.py
src/seed/: sam_seed.py
