[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-seg"
version = "0.1.0"
description = "Segmentation từng cây cà phê & gán nhãn mật độ hoa (accuracy-first)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]